# routes/api/special.go
@@ -26,9 +26,10 @@ func NewSpecialApiHandler(userService services.IUserService) *SpecialApiHandler 
 func (h *SpecialApiHandler) RegisterRoutes(router chi.Router) {
 	r := chi.NewRouter()
 	r.Use(middlewares.NewAuthenticateMiddleware(h.userSrvc).Handler)
-	r.Get("/", h.Get)
+	r.Get("/email", h.GetEmail)
+	r.Get("/hasData", h.HasData)
 
-	router.Mount("/email", r)
+	router.Mount("/special", r)
 }
 
 // @Summary Retrieve a users email
@@ -38,8 +39,8 @@ func (h *SpecialApiHandler) RegisterRoutes(router chi.Router) {
 // @Param user query string false "The user to filter by if using Bearer authentication and the admin token"
 // @Security ApiKeyAuth
 // @Success 200 {object} models.Email
-// @Router /email [get]
-func (h *SpecialApiHandler) Get(w http.ResponseWriter, r *http.Request) {
+// @Router /special/email [get]
+func (h *SpecialApiHandler) GetEmail(w http.ResponseWriter, r *http.Request) {
 	user, err := h.userSrvc.GetUserById(r.URL.Query().Get("user"))
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
@@ -49,5 +50,26 @@ func (h *SpecialApiHandler) Get(w http.ResponseWriter, r *http.Request) {
 
 	helpers.RespondJSON(w, r, http.StatusOK, map[string]interface{}{
 		"email": user.Email,
+	})
+}
+
+// @Summary Whether the user has data any heartbeats received yet
+// @ID has-data
+// @Tags hasData
+// @Produce json
+// @Param user query string false "The user to filter by if using Bearer authentication and the admin token"
+// @Security ApiKeyAuth
+// @Success 200 {object} models.HasData
+// @Router /special/hasData [get]
+func (h *SpecialApiHandler) HasData(w http.ResponseWriter, r *http.Request) {
+	user, err := h.userSrvc.GetUserById(r.URL.Query().Get("user"))
+	if err != nil {
+		w.WriteHeader(http.StatusInternalServerError)
+		w.Write([]byte(err.Error()))
+		return
+	}
+
+	helpers.RespondJSON(w, r, http.StatusOK, map[string]interface{}{
+		"hasData": user.HasData,
 	})
 }
